--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CombinacionActivity">
+        </activity>
+        <activity android:name=".ManualidadesActivity">
+        </activity>
+        <activity android:name=".DecoracionesActivity">
+        </activity>
     </application>
 
 </manifest>
